--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,8 @@
     </style>
 </head>
 <body class="bg-white font-body">
+
+    <!-- NAV BAR -->
     <nav class="flex justify-between items-center h-16 md:h-20 px-4 md:px-12 shadow-md">
         <div>
             <img src="../src/img/travely.png" alt="Travely logo" class="w-24 md:w-32 lg:w-40">
@@ -53,7 +55,8 @@
             </a>
         </div>
     </nav>
-
+    
+    <!-- HERO SECTION -->
     <section class="relative min-h-screen bg-cover bg-center flex items-center justify-center py-12 md:py-20" style="background-image: url('../src/img/shamoon.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class="relative z-10 w-full max-w-4xl px-4 md:px-12 text-center">
@@ -79,6 +82,7 @@
         </div>
     </section>
 
+    <!-- RESULTS -->
     <section id="search-results" class="py-12 md:py-20 bg-gray-100 hidden">
         <div class="container mx-auto px-4 md:px-12">
             <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12">Search Results</h2>
@@ -95,7 +99,8 @@
             </div>
         </div>
     </section>
-
+    
+    <!-- FOOTER -->
     <footer class="bg-primary text-white py-8 md:py-12">
         <div class="container mx-auto px-4 md:px-12">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
